2009-02-12  Jürg Billeter  <j@bitron.ch>

	* vala/valagenieparser.vala:

	Fix else if parsing, fixes bug 562632

2009-02-12  Ryan Lortie  <desrt@desrt.ca>

	* gobject/valagasyncmodule.vala:

	Store the Data structure as the op_res gpointer of the
	GSimpleAsyncResult.  Emit a function to free it and hook it in.

2009-02-12  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodearraymodule.vala:

	Keep arrays NULL-terminated when appending

2009-02-11  Ryan Lortie  <desrt@desrt.ca>

	Bug 571263 – make yielding functions dispatch results to mainloop

	* gobject/valaccodemethodmodule.vala:
	* valagasyncmodule.vala:
	
	Create simple async result from _async entry function and use it when
	doing return; throw; or at the end of the function.  Fix return
	statements for the async case.  Dispatch via idle handler in the case
	that we are returning without having yielded.

2009-02-11  Ryan Lortie  <desrt@desrt.ca>

	Bug 566363 – yielding functions that throw don't work

	* gobject/valagerrormodule.vala:
	* gobject/valagasyncmodule.vala:

	Refactor GErrorModule to remove some common code and introduce a
	separate (virtual) function 'return_with_exception' to create
	the code for returning exceptions from functions.

	In GAsyncModule, override the new virtual function to call
	g_simple_async_report_gerror_in_idle().

2009-02-11  Ryan Lortie  <desrt@desrt.ca>

	Bug 571256 – [CCode (async_only = true)] formal parameter annotation

	* vala/valacodewriter.vala:
	* vala/valaformalparameter.vala:
	* gobject/valaccodemethodcallmodule.vala:

	Allow emitting some C code arguments only in the case that we are
	calling the asynchronous version of a yielding function.  This helps
	with the io_priority oddity in GIO.

2009-02-11  Jürg Billeter  <j@bitron.ch>

	* vala/valaenum.vala:
	* vala/valainterface.vala:
	* vala/valastruct.vala:
	* vapigen/valagirparser.vala:

	Recognize c:type attributes in .gir

2009-02-10  Ryan Lortie  <desrt@desrt.ca>

	Bug 571169 – make floating references generic
